<resources>
    <string name="app_name">Garage Billing System</string>
    <string name="hello_world_it_s_demo">Hello World! It\'s Demo</string>
    <string name="logo">Logo</string>
    <string name="update_spares">Update Spares</string>
    <string name="car_registration_no">Car Registration No.</string>
    <string name="add_complaint">Add complaint</string>
    <string name="new_jobcard">New Jobcard</string>
    <string name="add_spares">Add spares</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="preview_of_jobcard">Preview of Jobcard</string>
    <string name="spare_name">Spare Name</string>
    <string name="price">Price</string>
    <string name="total_estimate">Total Estimate</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="previous_jobcards">Previous Jobcards</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="email_id">Email ID</string>
    <string name="update_spare_details">Update Spare Details</string>
    <string name="spare_estimate">Spare Estimate</string>
    <string name="update">Update</string>
    <string name="find_customer">Find Customer</string>
    <string name="customer_not_found">Customer not found??</string>
    <string name="register">Register</string>
    <string name="tools">tools</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="view_pdf">View PDF</string>
    <string name="date">Date</string>
    <string name="complaint">Complaint</string>
    <string name="spare_quantity">Spare Quantity</string>
    <string name="preview">Preview</string>
</resources>