<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateSparesActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_spare"
        android:contentDescription="@string/tools" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_spare_details"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_spare_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_id"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/spare_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_spare_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_spare_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_spare_name"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/spare_estimate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_spare_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_spare_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="update"
        android:text="@string/update" />
</RelativeLayout>