<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:id="@+id/jobCardView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a0a0a0">

        <LinearLayout
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_complaint"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/complaint"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_Date"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date"
                android:textSize="15sp" />
        </LinearLayout>
        <Button
            android:id="@+id/view_pdf"
            android:layout_width="wrap_content"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:text="@string/view_pdf"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,SmallSp"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>